--- a/app/src/main/res/layout/window_app_update.xml
+++ b/app/src/main/res/layout/window_app_update.xml
@@ -13,7 +13,7 @@
         <RelativeLayout
                 android:layout_width="@dimen/app_update_circle_layout"
                 android:layout_height="@dimen/app_update_circle_layout">
-            <xingcomm.android.library.view.TasksCompletedView
+            <com.yijiehl.club.android.ui.view.TasksCompletedView
                     android:id="@+id/tcv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
