修复登录后应用关闭bug 修复婴儿健康数据未加载完成前查看婴儿数据崩溃bug 优化图片预览平移和滑动事件 增加健康数据未保存检查 增加图片删除提示框 增加激活失败提示框 增加为保存健康数据提示框 调试完毕友盟分享插件 修复系统ViewPager多手指滑动的bug 修复MyButton没有background时崩溃异常 优化图片加载控件内存使用

--- a/app/src/main/res/layout/activity_image_viewer_layout.xml
+++ b/app/src/main/res/layout/activity_image_viewer_layout.xml
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:visibility="visible"/>
 
-    <android.support.v4.view.ViewPager
+    <com.uuzz.android.ui.view.ViewPagerFixed
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,6 +34,7 @@
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="50dip"
+        android:padding="@dimen/primary_List_margin"
         android:visibility="visible">
 
         <ImageView
