--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        style="@style/splash_background_image"
-        android:src="@drawable/login_bg"/>
+        android:id="@+id/iv_login_bg"
+        style="@style/splash_background_image"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
