--- a/app/src/main/res/layout/activity_supplement_info.xml
+++ b/app/src/main/res/layout/activity_supplement_info.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:src="@drawable/login_bg"
+        android:id="@+id/iv_login_bg"
         style="@style/splash_background_image" />
     <ScrollView
         android:layout_width="match_parent"
