--- a/app/src/main/res/layout/activity_ask_question.xml
+++ b/app/src/main/res/layout/activity_ask_question.xml
@@ -79,14 +79,14 @@
             android:layout_height="wrap_content"
             android:textColor="@color/textColorPrimary"
             android:textSize="@dimen/primary_text_size"
-            android:text="您的问题我们会在24小时内回复
+            android:text="您的问题我们会在24小时内回复\r\n
 如果是紧急问题，请直接拨打下面的客服电话。 "/>
         <TextView
             android:id="@+id/tv_ask_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textColor="@color/textColorPrimary"
+            android:textColor="@color/colorPrimary"
             android:textSize="@dimen/primary_text_size"/>
     </LinearLayout>
 
