--- a/app/src/main/res/layout/item_image_viewer_layout.xml
+++ b/app/src/main/res/layout/item_image_viewer_layout.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
-    android:adjustViewBounds="true"
+    android:adjustViewBounds="false"
     android:scaleType="matrix"/>
