修改统计图表背景色 添加统计图表未选中点颜色 增加地址查询与保存 修改默认网络任务session失效后不会触发onFail 修改保存数据到本地的方法返回值 修正上传病例出片传参问题 添加主页1分钟轮训激活接口 修正照片模块空数据bug 添加图标背景点击跳转健康信息 修复图片预览滑动冲突事件

--- a/app/src/main/res/layout/fragment_form_mother_after_layout.xml
+++ b/app/src/main/res/layout/fragment_form_mother_after_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -47,6 +48,7 @@
         <com.uuzz.android.ui.view.LineChatView
             android:id="@+id/lcv_mother_weight"
             android:background="#aadea0"
+            app:unselected_point_color="#d8d8d8"
             style="@style/chat" />
 
     </RelativeLayout>
@@ -92,6 +94,7 @@
         <com.uuzz.android.ui.view.LineChatView
             android:id="@+id/lcv_mother_chest"
             android:background="#8de4c3"
+            app:unselected_point_color="#d8d8d8"
             style="@style/chat" />
 
     </RelativeLayout>
@@ -136,6 +139,7 @@
         <com.uuzz.android.ui.view.LineChatView
             android:id="@+id/lcv_mother_waist"
             android:background="#90dee6"
+            app:unselected_point_color="#d8d8d8"
             style="@style/chat" />
 
     </RelativeLayout>
@@ -180,6 +184,7 @@
         <com.uuzz.android.ui.view.LineChatView
             android:id="@+id/lcv_mother_hips"
             android:background="#9dbbe8"
+            app:unselected_point_color="#d8d8d8"
             style="@style/chat" />
 
     </RelativeLayout>
