--- a/app/src/main/res/layout/item_add_photo_layout.xml
+++ b/app/src/main/res/layout/item_add_photo_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.uuzz.android.ui.view.IconTextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="100dip"
+    android:layout_height="100dip"
     android:text="@string/icon_add"
     android:textSize="55dip"
     android:paddingLeft="28dip"
