修复填错的健康数据请求type 优化首页数据填充 改每分钟请求一遍激活接口为显示首页请求激活接口 修改首页分享收藏图片链接

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,7 @@
     <dimen name="blank_space_6">96dp</dimen>
     <dimen name="tx_size_7">20sp</dimen>
     <dimen name="blank_space_7">250dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
