--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,6 +35,7 @@
         <item name="android:textColor">#4a4a4a</item>
         <item name="android:textSize">18dip</item>
     </style>
+
     <style name="tv_personal_info_item_right_text">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -388,5 +389,9 @@
         <item name="android:windowFrame">@null</item>
         <item name="android:windowBackground">@color/transparent</item>
     </style>
+
+    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
