--- a/app/src/main/res/layout/item_sign_in.xml
+++ b/app/src/main/res/layout/item_sign_in.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/primary_margin">
 
     <TextView
         android:id="@+id/tv_week"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/primary_margin"
-        android:layout_marginTop="19dip"
+        android:layout_centerVertical="true"
         android:text="周一"
         android:textColor="#4a4a4a"
-        android:textSize="24dip" />
+        android:textSize="20dip" />
 
     <TextView
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="33dip"
-        android:layout_marginTop="@dimen/primary_margin"
         android:layout_toRightOf="@+id/tv_week"
         android:text="2016-10-19"
         android:textColor="#4a4a4a"
-        android:textSize="18dip" />
+        android:textSize="16dip" />
 
     <TextView
         android:id="@+id/tv_time"
@@ -34,7 +33,7 @@
         android:layout_toRightOf="@+id/tv_week"
         android:text="10:00"
         android:textColor="@color/textColorLight"
-        android:textSize="18dip" />
+        android:textSize="16dip" />
 
     <TextView
         android:id="@+id/tv_sign_success"
@@ -46,5 +45,5 @@
         android:layout_toRightOf="@+id/tv_time"
         android:text="签到成功"
         android:textColor="@color/textColorLight"
-        android:textSize="18dip" />
+        android:textSize="16dip" />
 </RelativeLayout>
