添加照片上传前压缩与角度转换（未测试） 添加孕育记忆页面没有数据时空转 修复提问不能重复上传图片bug

--- a/app/src/main/res/drawable/bg_breed_memory_1.xml
+++ b/app/src/main/res/drawable/bg_breed_memory_1.xml
@@ -5,7 +5,7 @@
             android:shape="oval"
             android:useLevel="false">
             <solid
-                android:color="#AD8EF3" />
+                android:color="#F38EB8" />
             <padding
                 android:bottom="15dp"
                 android:left="15dp"
@@ -18,7 +18,7 @@
             android:shape="oval"
             android:useLevel="false">
             <solid
-                android:color="#AD8EF3" />
+                android:color="#F38EB8" />
             <stroke android:color="@color/white"
                 android:dashGap="5dip"
                 android:dashWidth="2dip"
