--- a/app/src/main/res/layout/item_breed_memory_layout.xml
+++ b/app/src/main/res/layout/item_breed_memory_layout.xml
@@ -26,6 +26,7 @@
                 android:textColor="@color/white"
                 android:textSize="30dip"
                 android:layout_marginBottom="10dip"
+                android:visibility="gone"
                 tools:text="宝宝第10天"/>
             <TextView
                 android:layout_width="wrap_content"
