增加禁止扫描缩小后的图片文件夹 修改上传照片前hit提示 修改个人信息图片为圆角 修改选择图片适配器的加号大小

--- a/app/src/main/res/layout/activity_upload_photo_activity.xml
+++ b/app/src/main/res/layout/activity_upload_photo_activity.xml
@@ -67,7 +67,7 @@
             android:background="@null"
             android:padding="0dip"
             android:textColorHint="@color/textColorLight"
-            android:hint="标签"/>
+            android:hint="@string/say_something"/>
 
         <View
             android:layout_marginTop="@dimen/primary_List_margin"
