--- a/app/src/main/res/layout/activity_mine.xml
+++ b/app/src/main/res/layout/activity_mine.xml
@@ -18,7 +18,7 @@
             android:layout_marginRight="@dimen/primary_margin"
             android:layout_marginTop="24dip">
 
-            <ImageView
+            <com.uuzz.android.ui.view.CircularImageView
                 android:id="@+id/iv_my_head_pic"
                 android:layout_width="80dip"
                 android:layout_height="80dip"
