--- a/app/src/main/res/layout/fragment_health_service_in_layout.xml
+++ b/app/src/main/res/layout/fragment_health_service_in_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f7fbff">
@@ -58,7 +59,7 @@
                 android:layout_marginLeft="30dip"
                 android:layout_marginTop="18dip"
                 android:layout_marginRight="30dip"
-                android:text="@string/test_health"
+                tools:text="@string/test_health"
                 android:textSize="@dimen/primary_text_size"
                 android:textColor="@color/textColorPrimary"/>
 
