隐藏宝宝出生日期；

--- a/app/src/main/res/layout/fragment_health_data_baby.xml
+++ b/app/src/main/res/layout/fragment_health_data_baby.xml
@@ -12,6 +12,7 @@
     <View style="@style/health_data_divider" />
 
     <RelativeLayout
+        android:visibility="gone"
         style="@style/health_data_item_container">
         <TextView
             style="@style/health_data_title"
