--- a/app/src/main/res/layout/item_my_message_layout.xml
+++ b/app/src/main/res/layout/item_my_message_layout.xml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="75dip"
-android:background="@color/white">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white">
+
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dip"
         android:layout_marginTop="15dip"
-        android:textSize="18dip"
+        android:text="问答"
         android:textColor="@color/textColorPrimary"
-        android:text="问答"/>
+        android:textSize="18dip" />
+
     <TextView
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="17dip"
-        android:textColor="@color/textColorLight"
         android:layout_marginLeft="15dip"
         android:layout_marginTop="43dip"
-        android:text="您的问题，有新的答案。"/>
+        android:text="您的问题，有新的答案。"
+        android:textColor="@color/textColorLight"
+        android:textSize="17dip" />
+
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="15dip"
         android:layout_marginRight="15dip"
-        android:textColor="@color/colorPrimary"
-        android:text="08-24  10:30"/>
+        android:layout_marginTop="15dip"
+        android:text="08-24  10:30"
+        android:textColor="@color/colorPrimary" />
 </RelativeLayout>
