隐藏健康页面”了解更多“ 健康页面上面日期bug修改

--- a/app/src/main/res/layout/fragment_health_service_in_layout.xml
+++ b/app/src/main/res/layout/fragment_health_service_in_layout.xml
@@ -79,6 +79,7 @@
                 android:layout_toLeftOf="@id/im_more"
                 android:paddingRight="@dimen/text_space"
                 android:layout_alignParentBottom="true"
+                android:visibility="gone"
                 android:textSize="@dimen/second_text_size"
                 android:textColor="@color/colorAccent"
                 android:text="@string/know_more"/>
