--- a/app/src/main/res/layout/fragment_health_service_before_layout.xml
+++ b/app/src/main/res/layout/fragment_health_service_before_layout.xml
@@ -76,6 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@id/im_more"
+                android:visibility="gone"
                 android:paddingRight="@dimen/text_space"
                 android:layout_alignParentBottom="true"
                 android:textSize="@dimen/second_text_size"
