--- a/app/src/main/res/layout/item_my_message_layout.xml
+++ b/app/src/main/res/layout/item_my_message_layout.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="15dip"
         android:text="问答"
         android:textColor="@color/textColorPrimary"
+        android:visibility="gone"
         android:textSize="18dip" />
 
     <TextView
@@ -19,18 +20,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dip"
-        android:layout_marginTop="43dip"
+        android:layout_marginTop="10dip"
         android:text="您的问题，有新的答案。"
-        android:textColor="@color/textColorLight"
         android:textSize="17dip" />
 
     <TextView
-        android:id="@+id/tv_time"
+        android:id="@+id/tv_more"
+        android:layout_below="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="15dip"
+        android:layout_marginTop="25dip"
+        android:text="查看更多"/>
+
+    <TextView
+        android:id="@+id/tv_time"
+        android:layout_below="@+id/content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dip"
-        android:layout_marginTop="15dip"
-        android:text="08-24  10:30"
-        android:textColor="@color/colorPrimary" />
+        android:layout_marginTop="25dip"
+        android:text="08-24  10:30" />
 </RelativeLayout>
