--- a/app/src/main/res/layout/item_accine_list.xml
+++ b/app/src/main/res/layout/item_accine_list.xml
@@ -29,7 +29,7 @@
             android:id="@+id/tv_vaccine_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_alignParentRight="true"
             android:paddingTop="10dip"
             android:paddingBottom="14dip"
             android:text="一个月"
